# PyData-Prefect-Workshop

./: Prefect-server-setup.md  README.md  docker-compose.yml  e01_my_first_flow.py  e02a_sentiment_pipeline_v1.py  e02b_sentiment_pipeline_v2.py  e03b_kafka_tweet_deployment.py  environment.yml  example_create_deployment.py  kafka_consume.py  kafka_publish.py  my_gh_workflow.py  notes.md  pipeline_v1.py  pipeline_v2.py  pyproject.toml  requirements.txt  test_script.py
config/: kafka_config copy.py  kafka_config.py  mongodb_config copy.py  mongodb_config.py
exercises/: e02a_sentiment_pipeline_v1.py  e02b_sentiment_pipeline_v2.py  e03a_kafka_tweet_publisher.py  e03b_kafka_tweet_deployment.py  e04_sentiment_pipeline_v3.py
fastapi_app/: Dockerfile  main.py  requirements.txt
solution/: s01_my_first_flow.py  s02a_sentiment_pipeline_v1.py  s02b_sentiment_pipeline_v2.py  s03a_kafka_tweet_publisher.py  s03b_kafka_tweet_deployment.py  s04_sentiment_pipeline_v3.py
streamlit_app/: Dockerfile  Tweets.csv  app.py  db_connection.py  requirements.txt
tests/: test_s01.py  test_s02b_data_processing.py  test_s02b_sentiment_analysis.py
